# django_hw_3

./: pyproject.toml
.github/workflows/: deploy.yml
my_project/: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pytest.ini  requirements.txt
my_project/courses/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py  webhooks.py
my_project/courses/migrations/: 0001_initial.py  0002_alter_course_preview_alter_lesson_preview.py  0003_course_user_lesson_user_subscription.py  0004_remove_course_preview_course_price_lesson_updated_at.py
my_project/courses/tests/: test_models.py  test_models_2.py
my_project/fixtures/: payment_fixture.json
my_project/my_project/: celery.py  settings.py  urls.py
my_project/my_project/.github/workflows/: deploy.yml
my_project/nginx/: nginx.conf
my_project/users/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
my_project/users/management/commands/: create_test_payments.py
my_project/users/migrations/: 0001_initial.py  0002_alter_customuser_city_alter_customuser_email_and_more.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_payment.py  0003_user_username.py
