[tool.poetry]
name = "pythonproject5"
version = "0.1.0"
description = ""
authors = ["Kira <kirillbutakov02021994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
